# dita_package_processor

./: .gitignore  README-CLI.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.mac/: pyvenv.cfg
dita_package_processor/: __init__.py  __main__.py  cli.py  cli_discover.py  cli_execute.py  cli_normalize.py  cli_plan.py  cli_plugin.py  cli_run.py  config.py  dita_xml.py  orchestration.py  pipeline.py  utils.py
dita_package_processor/discovery/: classifiers.py  graph.py  models.py  path_normalizer.py  patterns.py  relationships.py  report.py  scanner.py  signatures.py
dita_package_processor/execution/: bootstrap.py  dispatcher.py  dry_run_executor.py  models.py  registry.py  report_writer.py
dita_package_processor/knowledge/: invariants.py  known_patterns.py  known_patterns.yaml  map_types.py  topic_types.py
dita_package_processor/materialization/: builder.py  collision.py  layout.py  models.py  orchestrator.py  validation.py
dita_package_processor/planning/: executor.py  graph_planner.py  hydrator.py  input_normalizer.py  invariants.py  layout_rules.py  loader.py  models.py  planner.py  validation.py
dita_package_processor/plugins/: __init__.py  core_plugin.py  loader.py  protocol.py  registry.py  validator.py
dita_package_processor/steps/: __init__.py  base.py  process_maps.py  refactor_glossary.py  remove_index_map.py  rename_main_map.py
docs/: 404.html  api-ref-cli.md  api-ref-core.md  api-ref-execution.md  api-ref-planning.md  api-ref-steps.md  configuration.md  design.md  developing-migration-job.md  discovery-report.md  discovery.md  execution-report.md  execution.md  executor-arc-design.md  extensions-guide.md  extensions.md  getting-started.md  hardening.md  how-to-create-handlers.md  howto-transform-a-package.md  index.html  index.md  new-patterns.md  objects.inv  pattern-evaluator.md  pattern-worked-example.md  patterns-actions-handlers.md  pipeline.md  plan-creation.md  run-vs-execute.md  understand-the-pipeline.md
docs-user/: README.txt  dita_package_processor_user_manual.ditamap
docs-user/maps/: 01-introduction.ditamap  02-installation-and-setup.ditamap  03-running-migration-jobs.ditamap  04-understanding-the-migration-pipeline.ditamap  05-improving-rough-dita-packages.ditamap  06-plugin-development-guide.ditamap  07-troubleshooting.ditamap  08-reference.ditamap
docs-user/media/: execution-report-triage.mmd  job-lifecycle.mmd  migration-decision-flow.mmd  patterns-actions-handlers.mmd  pipeline-overview.mmd  plugin-lifecycle.mmd  plugin-test-matrix.mmd
docs/api-ref-cli/: index.html
docs/api-ref-core/: index.html
docs/api-ref-discovery/: index.html
docs/api-ref-execution/: index.html
docs/api-ref-knowledge/: index.html
docs/api-ref-materialization/: index.html
docs/api-ref-planning/: index.html
docs/api-ref-plugins/: index.html
docs/api-ref-steps/: index.html
docs/configuration/: index.html
docs/design/: index.html
docs/developing-migration-job/: index.html
docs/discovery/: index.html
docs/discovery-report/: index.html
docs/execution/: index.html
docs/execution-report/: index.html
docs/execution_contract/: index.html
docs/executor-arc-design/: index.html
docs/extensions/: index.html
docs/extensions-guide/: index.html
docs/getting-started/: index.html
docs/hardening/: index.html
docs/how-to-create-handlers/: index.html
docs/howto-transform-a-package/: index.html
docs/new-patterns/: index.html
docs/pattern-discovery-contract/: index.html
docs/pattern-evaluator/: index.html
docs/pattern-worked-example/: index.html
docs/patterns-actions-handlers/: index.html
docs/pipeline/: index.html
docs/pipeline-integration/: index.html
docs/plan-creation/: index.html
docs/run-vs-execute/: index.html
docs/search/: search_index.json
docs/testing/: index.html
docs/understand-the-pipeline/: index.html
site/: api-ref-cli.md  api-ref-discovery.md  api-ref-knowledge.md  api-ref-materialization.md  api-ref-planning.md  api-ref-plugins.md  api-ref-steps.md  configuration.md  design.md  discovery.md  execution_contract.md  extensions-guide.md  getting-started.md  hardening.md  how-to-create-handlers.md  pattern-discovery-contract.md  pipeline-integration.md  plan-creation.md  testing.md
tests/: conftest.py
tests/cli/: test_cli_discover.py  test_cli_execute.py  test_cli_normalize.py  test_cli_plan.py  test_cli_root.py  test_cli_run.py
tests/discovery/: test_discovery_classifiers.py  test_discovery_extractors_map_refs.py  test_discovery_extractors_topic_refs.py  test_discovery_graph.py  test_discovery_models.py  test_discovery_path_normalizer.py  test_discovery_pattern_evaluator.py  test_discovery_pattern_evaluator_fallback.py  test_discovery_patterns.py  test_discovery_relationships.py  test_discovery_report.py  test_discovery_report_contract.py  test_discovery_scanner.py  test_discovery_signatures.py  test_relationship_extractor.py
tests/execution/: test_execution_dispatcher.py  test_execution_dry_run_executor.py  test_execution_executors_filesystem.py  test_execution_fs_copy_handlers.py  test_execution_fs_copy_media_handlers.py  test_execution_fs_copy_topic_handlers.py  test_execution_models.py  test_execution_registry.py  test_execution_report_contract.py  test_execution_report_writer.py  test_execution_safety_policies.py  test_execution_safety_sandbox.py
tests/integration/: simple_package.py  test_integration_cli_contract.py  test_integration_end_to_end.py  test_integration_error_conditions.py  test_integration_no_definition_map.py  test_plan_execute_copy.py
tests/knowledge/: test_knoweldge_invariants.py  test_knoweldge_known_patterns.py  test_knowledge_map_types.py  test_knowledge_topic_types.py
tests/materialization/: test_materialization_collision_detection.py  test_materialization_execution_filesystem.py  test_materialization_failures.py  (+5 more)
tools/: README.generate_pattern_docs.md  README.generate_schema_docs.md  README.tree.md  generate_pattern_docs.py  generate_schema_docs.py  scaffold_plugin.py  tree.py
(+156 files in other folders)
