# -------------------------------------------------------------------
# Build system configuration
# -------------------------------------------------------------------
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"


# -------------------------------------------------------------------
# Project metadata (PEP 621 – REQUIRED)
# -------------------------------------------------------------------
[project]
name = "dita-package-processor"
version = "0.1.0"
description = "Deterministic, modular pipeline for normalizing DITA 1.3 packages"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Matt Briggs" }
]

# ---- Runtime dependencies (moved from requirements.txt conceptually) ----
dependencies = [
  "lxml>=5.1.0",
  "packaging>=24.0",
  "pydantic>=2.6.0",
  "pyyaml>=6.0",
  "rich>=13.7.0",
  "networkx>=3.2.1",
  "jsonschema>=4.21.0"
]

# ---- Console script entry point (THIS FIXES YOUR CLI) ----
[project.scripts]
dita_package_processor = "dita_package_processor.cli:main"


# -------------------------------------------------------------------
# Setuptools configuration
# -------------------------------------------------------------------
[tool.setuptools]
package-dir = { "" = "." }

# Automatically include all subpackages (important for your size)
[tool.setuptools.packages.find]
where = ["."]
include = ["dita_package_processor*"]


# -------------------------------------------------------------------
# Runtime configuration for the DITA Package Processor
# This defines WHAT the processor does, not how it is built.
# -------------------------------------------------------------------
[tool.dita_package_processor]


# -------------------------------------------------------------------
# Package-level configuration
# -------------------------------------------------------------------
[tool.dita_package_processor.package]

root_dir = "dita_package_processor"
docx_stem = "OutputDoc"


# -------------------------------------------------------------------
# Pipeline configuration
# -------------------------------------------------------------------
[tool.dita_package_processor.pipeline]

steps = [
  "remove-index-map",
  "rename-main-map",
  "process-maps",
  "refactor-glossary",
]


# -------------------------------------------------------------------
# Glossary / definition processing (optional)
# -------------------------------------------------------------------
[tool.dita_package_processor.definition]

map = "Definitions.ditamap"
navtitle = "Definition topic"


# -------------------------------------------------------------------
# Logging configuration
# -------------------------------------------------------------------
[tool.dita_package_processor.logging]

level = "INFO"


# -------------------------------------------------------------------
# Extension configuration
# -------------------------------------------------------------------
[tool.dita_package_processor.extensions]

[tool.dita_package_processor.extensions.regex_cleanup]

enabled = false
patterns = [
  { find = "\\s+", replace = " " },
  { find = "TODO:", replace = "" },
]